logs/proj_misc_trimpot.log
make[1]: se ingresa al directorio «/home/martin/Proyectos/ciaa/liblpc»
CC lpc_chip_43xx/src/adc_18xx_43xx.c
CC lpc_chip_43xx/src/aes_18xx_43xx.c
CC lpc_chip_43xx/src/atimer_18xx_43xx.c
CC lpc_chip_43xx/src/ccan_18xx_43xx.c
CC lpc_chip_43xx/src/chip_18xx_43xx.c
CC lpc_chip_43xx/src/clock_18xx_43xx.c
CC lpc_chip_43xx/src/dac_18xx_43xx.c
CC lpc_chip_43xx/src/eeprom_18xx_43xx.c
CC lpc_chip_43xx/src/emc_18xx_43xx.c
CC lpc_chip_43xx/src/enet_18xx_43xx.c
CC lpc_chip_43xx/src/evrt_18xx_43xx.c
CC lpc_chip_43xx/src/fpu_init.c
CC lpc_chip_43xx/src/gpdma_18xx_43xx.c
CC lpc_chip_43xx/src/gpio_18xx_43xx.c
CC lpc_chip_43xx/src/gpiogroup_18xx_43xx.c
CC lpc_chip_43xx/src/hsadc_18xx_43xx.c
CC lpc_chip_43xx/src/i2c_18xx_43xx.c
CC lpc_chip_43xx/src/i2cm_18xx_43xx.c
CC lpc_chip_43xx/src/i2s_18xx_43xx.c
CC lpc_chip_43xx/src/iap_18xx_43xx.c
CC lpc_chip_43xx/src/lcd_18xx_43xx.c
CC lpc_chip_43xx/src/otp_18xx_43xx.c
CC lpc_chip_43xx/src/pinint_18xx_43xx.c
CC lpc_chip_43xx/src/pmc_18xx_43xx.c
CC lpc_chip_43xx/src/ring_buffer.c
CC lpc_chip_43xx/src/ritimer_18xx_43xx.c
CC lpc_chip_43xx/src/rtc_18xx_43xx.c
CC lpc_chip_43xx/src/sct_18xx_43xx.c
CC lpc_chip_43xx/src/sct_pwm_18xx_43xx.c
CC lpc_chip_43xx/src/sdif_18xx_43xx.c
CC lpc_chip_43xx/src/sdio_18xx_43xx.c
CC lpc_chip_43xx/src/sdmmc_18xx_43xx.c
CC lpc_chip_43xx/src/spi_18xx_43xx.c
CC lpc_chip_43xx/src/ssp_18xx_43xx.c
CC lpc_chip_43xx/src/stopwatch_18xx_43xx.c
CC lpc_chip_43xx/src/sysinit_18xx_43xx.c
CC lpc_chip_43xx/src/timer_18xx_43xx.c
CC lpc_chip_43xx/src/uart_18xx_43xx.c
CC lpc_chip_43xx/src/wwdt_18xx_43xx.c
CC lpc_board_ciaa_edu_4337/src/board.c
CC lpc_board_ciaa_edu_4337/src/board_sysinit.c
CC lpc_board_ciaa_edu_4337/src/crp.c
CC lpc_board_ciaa_edu_4337/src/lcd_st7565s.c
CC lpc_board_ciaa_edu_4337/src/lpc_phy_smsc87x0.c
CC lpc_board_ciaa_edu_4337/src/wm8904.c
CC misc_trimpot/example/src/trimpot.c
misc_trimpot/example/src/trimpot.c:46:3: warning: #warning "Channel configurations not set for the board!" [-Wcpp]
  #warning "Channel configurations not set for the board!"
   ^
misc_trimpot/example/src/trimpot.c: In function 'ADC0_IRQHandler':
misc_trimpot/example/src/trimpot.c:70:21: error: '_LPC_ADC_ID' undeclared (first use in this function)
  Chip_ADC_ReadValue(_LPC_ADC_ID, _ADC_CHANNLE, &dataADC);
                     ^
misc_trimpot/example/src/trimpot.c:70:21: note: each undeclared identifier is reported only once for each function it appears in
misc_trimpot/example/src/trimpot.c:70:34: error: '_ADC_CHANNLE' undeclared (first use in this function)
  Chip_ADC_ReadValue(_LPC_ADC_ID, _ADC_CHANNLE, &dataADC);
                                  ^
misc_trimpot/example/src/trimpot.c: In function 'SysTick_Handler':
misc_trimpot/example/src/trimpot.c:76:24: error: '_LPC_ADC_ID' undeclared (first use in this function)
  Chip_ADC_SetStartMode(_LPC_ADC_ID, ADC_START_NOW, ADC_TRIGGERMODE_RISING);
                        ^
misc_trimpot/example/src/trimpot.c: In function 'main':
misc_trimpot/example/src/trimpot.c:106:16: error: '_LPC_ADC_ID' undeclared (first use in this function)
  Chip_ADC_Init(_LPC_ADC_ID, &ADCSetup);
                ^
misc_trimpot/example/src/trimpot.c:107:38: error: '_ADC_CHANNLE' undeclared (first use in this function)
  Chip_ADC_EnableChannel(_LPC_ADC_ID, _ADC_CHANNLE, ENABLE);
                                      ^
misc_trimpot/example/src/trimpot.c:110:17: error: '_LPC_ADC_IRQ' undeclared (first use in this function)
  NVIC_EnableIRQ(_LPC_ADC_IRQ);
                 ^
make[1]: *** [misc_trimpot/example/src/trimpot.o] Error 1
make[1]: se sale del directorio «/home/martin/Proyectos/ciaa/liblpc»
